i2c: nice html/javascript result report generating (updated)

--- a/imgs/results/js/report.html
+++ b/imgs/results/js/report.html
@@ -28,7 +28,7 @@
 
 Number of test instances: <span id="stats_num_test_instances"></span> <br>
 Number of absolute matches: <span id="stats_num_absolute_matches"></span> <br>
-Percent absolute matches: <span id="stats_percent_absolute_matches"></span> <br>
+Percent absolute matches: <span id="stats_percent_absolute_matches"></span> % <br>
 Average error: <span id="stats_mean_error"></span> <br>
 Worst error: <span id="stats_worst_error"></span> <br>
 Number of output codes in incorrect format: <span id="stats_num_mismatches"></span> <br>
@@ -36,6 +36,11 @@ Number of output codes in incorrect format: <span id="stats_num_mismatches"></sp
 <img src="error_hist.png">
 
 <h2>Results on test data (sorted from worst to best error)</h2>
+
+<button id="shuffle-button">Shuffle!</button><br><br>
+
+
+<div id="report_table_container"></div>
 
 <table id="report_table">
     <tr>
